--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,11 @@
 body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 #app {
   position: relative;
   height: 300vh;
-  width: 100vw;
+  width: 100%;
 }
